# K_I_L_O

./: .actrc  .bandit  .editorconfig  .gitattributes  .gitignore  .gitlint  .markdownlint.yml  .pre-commit-config.yaml  .shellcheckrc  .uv.toml  .yamllint.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  install.sh  pyproject.toml  uninstall.sh
.config/kilo/: AGENTS.md  kilo.jsonc  package-lock.json  tui.json
.config/kilo/instructions/: ru-global.md
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
.kilo/: kilo.jsonc  package-lock.json  package.json
.kilo/agent/: adb-specialist.md  ble-engineer.md  ble-specialist.md  dev.md  gatt-recovery.md  git-specialist.md
.kilo/commands/: ble-capture.md  ble-debug.md  ble-setup.md  debug.md  flutter-build.md  gatt-discover.md  git-branch.md  git-commit.md  git-status.md  git.md  plan.md  prology-ble-debug.md  test.md
.kilo/docs/: WORKFLOWS.md  best-practices.md
.kilo/docs/explorations/: compound-plugin-integration-20241224.md  conductor-comparison-20241224.md
.kilo/docs/solutions/: exploration-template.md  schema.yaml
.kilo/docs/specs/user-documentation/: 03-tasks.md  README.md
.kilo/instructions/: ru-instructions.md
.kilo/skills/android-ble-debug/: SKILL.md
.kilo/skills/apk-reverse-engineer/: README.md
.kilo/skills/ble-engineering/: README.md  SKILL.md
.kilo/skills/frida-specialist/: README.md  SKILL.md
.kilocode/rules/: core.md
.kilocode/rules-code/: shell-standards.md
.kilocode/rules-debug/: android-miatoll.md
.kilocode/rules-fix/: fix-workflow.md
.kilocode/rules-plan/: architecture.md
.kilocode/rules-test/: testing-standards.md
ble-backup/: BLE-PROJECT.md
ble-backup/agent/: apk-reverse-engineer.md  esp32-arduino-specialist.md  gatt-recovery.md
ble-backup/ble-project/: README.md
ble-backup/ble-project/scripts/: activate.sh  setup-env.sh
ble-backup/commands/: gatt-discover.md
ble-backup/skills/apk-modifier/: README.md  SKILL.md
ble-backup/skills/apk-modifier/scripts/: decompile.sh  extract-resources.sh  patch-apk.sh
ble-backup/skills/apk-reverse-engineer/: SKILL.md
ble-backup/skills/apk-reverse-engineer/scripts/: analyze-manifest.sh  decompile-apk.sh  search-bluetooth.sh
ble-backup/skills/ble-engineering/: SKILL.md
ble-backup/skills/frida-specialist/scripts/: frida-enumerate.sh
ble-backup/skills/wireshark-specialist/: README.md  SKILL.md
ble-backup/skills/wireshark-specialist/scripts/: btmon-capture.sh  capture-bt.sh
ble-backup/tools/: ble-scan.ts  gatt-to-yaml.ts  hex-analyzer.ts
ble-project/: .gitignore  README.md
ble-project/android/scripts/: android-ble.py  frida-ble-intercept.js
ble-project/firmware/: README.md
ble-project/firmware/esp32-ble-scanner/: esp32-ble-scanner.ino
ble-project/firmware/esp32-gatt-server/: esp32-gatt-server.ino  platformio.ini
ble-project/gatt/: xiaomi-miband6.yaml
ble-project/scripts/: activate.sh  btmon-parse.py  btsnoop-analyze.py  gatt-scan.py  setup-env.sh
ble-project/tests/: __init__.py  test_ble_tools.py
docker/: .dockerignore  Dockerfile
docs/: AGENTS.md  ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  DEVELOPMENT.md  GUIDE.md  KILO-VSCODE.md  SCRIPTS.md  SKILLS.md  TECHNICAL_REFERENCE.md  TOOLS.md  TROUBLESHOOTING.md
gui/: index.html  server.py
scripts/: lib.py  lib.sh  preflight.sh  verify.sh
scripts/bumble/: virtual_ble.py
src/: bashrc-append.sh  profile-append.sh
src/dot-config-kilo/: kilo.jsonc
src/dot-config-kilo/agents/: russian-dev.md
src/dot-kilo/: kilo.jsonc
src/dot-kilo/agent/: dev.md  git-specialist.md
src/dot-kilo/agents/: ble-engineer.md  dev.md  doc-scribe.md  git-specialist.md  log-analyzer.md  reviewer.md  russian-dev.md
src/dot-kilo/commands/: ble-capture.md  ble-setup.md  debug.md  gatt-discover.md  git.md  plan.md  review.md  test.md
src/dot-kilo/docs/: FEATURES.md
src/dot-kilo/docs/solutions/patterns/: critical-patterns.md
src/dot-kilo/instructions/: ble-re-engineering.md
src/dot-kilo/skills/apk-modifier/: README.md
src/dot-kilo/skills/apk-reverse-engineer/: README.md
src/dot-kilo/skills/ble-engineering/: README.md  SKILL.md
src/dot-kilo/skills/frida-specialist/: README.md
src/dot-kilo/skills/wireshark-specialist/: README.md
src/dot-local-share-kilo/: auth.template.json
src/dot-ssh/: config
src/global-config/: kilo.jsonc
src/global-config/agents/: russian-dev.md
src/global-config/instructions/: ru-global.md
src/kilo-config/agent/: debugger.md  obd2-specialist.md  planner.md  python-senior.md  russian-dev.md  sys-inspector.md
src/kilo-config/commands/: flutter-build.md  git-branch.md  git.md
src/kilo-config/docs/: best-practices.md
src/kilo-config/instructions/: ru-instructions.md
src/local-share/: auth.template.json
src/ssh/: id_ed25519.pub
tests/: test_gui.py  test_install.bats  test_lib.bats  test_preflight.bats  test_sync.bats  test_uninstall.bats  test_verify.bats
(+6 files in other folders)
